--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Playpen+Sans&family=Roboto:wght@300&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="m-0 p-0 box-border overflow-hidden ">
+    <div id="root" class="bg-slate-200"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
